-- Generated by schemagraph
-- Normalized SQL DDL Schema

CREATE TABLE Account (
    id VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL,
    username VARCHAR(255) NOT NULL,
    isActive BOOLEAN NOT NULL,
    posts INTEGER,
    PRIMARY KEY (id),
    FOREIGN KEY (posts) REFERENCES Post(id) ON DELETE CASCADE
);

CREATE TABLE Post (
    id VARCHAR(255) NOT NULL,
    title VARCHAR(255) NOT NULL,
    body VARCHAR(255) NOT NULL,
    publishedAt VARCHAR(255),
    author INTEGER,
    tags INTEGER,
    id VARCHAR(255) NOT NULL,
    title VARCHAR(255) NOT NULL,
    body VARCHAR(255),
    published BOOLEAN NOT NULL,
    comments INTEGER,
    id VARCHAR(255) NOT NULL,
    title VARCHAR(255) NOT NULL,
    content VARCHAR(255),
    published BOOLEAN NOT NULL,
    authorId VARCHAR(255) NOT NULL,
    createdAt TIMESTAMP NOT NULL,
    PRIMARY KEY (id, id, id),
    FOREIGN KEY (author) REFERENCES Account(id) ON DELETE CASCADE,
    FOREIGN KEY (tags) REFERENCES Tag(id) ON DELETE CASCADE,
    FOREIGN KEY (author) REFERENCES User(id) ON DELETE CASCADE,
    FOREIGN KEY (comments) REFERENCES Comment(id) ON DELETE CASCADE,
    FOREIGN KEY (authorId) REFERENCES User(id) ON DELETE CASCADE
);

CREATE TABLE Tag (
    id VARCHAR(255) NOT NULL,
    name VARCHAR(255) NOT NULL,
    posts INTEGER,
    id VARCHAR(255) NOT NULL,
    name VARCHAR(255) NOT NULL UNIQUE,
    PRIMARY KEY (id, id),
    FOREIGN KEY (posts) REFERENCES Post(id) ON DELETE CASCADE
);

CREATE TABLE User (
    _id VARCHAR(255) NOT NULL,
    username VARCHAR(255) NOT NULL UNIQUE,
    email VARCHAR(255) NOT NULL UNIQUE,
    passwordHash VARCHAR(255) NOT NULL,
    bio VARCHAR(255),
    isActive BOOLEAN,
    createdAt TIMESTAMP,
    id VARCHAR(255) NOT NULL,
    name VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL,
    createdAt VARCHAR(255) NOT NULL,
    posts INTEGER,
    comments INTEGER,
    id VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL UNIQUE,
    name VARCHAR(255),
    role VARCHAR(255) NOT NULL,
    createdAt TIMESTAMP NOT NULL,
    PRIMARY KEY (_id, id, id),
    FOREIGN KEY (posts) REFERENCES Post(id) ON DELETE CASCADE,
    FOREIGN KEY (comments) REFERENCES Comment(id) ON DELETE CASCADE
);

CREATE TABLE Category (
    _id VARCHAR(255) NOT NULL,
    name VARCHAR(255) NOT NULL UNIQUE,
    slug VARCHAR(255) NOT NULL,
    description VARCHAR(255),
    PRIMARY KEY (_id)
);

CREATE TABLE Article (
    _id VARCHAR(255) NOT NULL,
    title VARCHAR(255) NOT NULL,
    slug VARCHAR(255) NOT NULL UNIQUE,
    content VARCHAR(255) NOT NULL,
    author VARCHAR(255) NOT NULL,
    category VARCHAR(255),
    tags VARCHAR(255),
    viewCount NUMERIC(10,2),
    isPublished BOOLEAN,
    publishedAt TIMESTAMP,
    PRIMARY KEY (_id),
    FOREIGN KEY (author) REFERENCES User(_id) ON DELETE CASCADE,
    FOREIGN KEY (category) REFERENCES Category(_id) ON DELETE CASCADE
);

CREATE TABLE Comment (
    _id VARCHAR(255) NOT NULL,
    article VARCHAR(255) NOT NULL,
    author VARCHAR(255) NOT NULL,
    body VARCHAR(255) NOT NULL,
    createdAt TIMESTAMP,
    id VARCHAR(255) NOT NULL,
    message VARCHAR(255) NOT NULL,
    createdAt VARCHAR(255) NOT NULL,
    post INTEGER,
    id VARCHAR(255) NOT NULL,
    taskId VARCHAR(255) NOT NULL,
    authorId VARCHAR(255) NOT NULL,
    content VARCHAR(255) NOT NULL,
    createdAt TIMESTAMP NOT NULL,
    PRIMARY KEY (_id, id, id),
    FOREIGN KEY (article) REFERENCES Article(_id) ON DELETE CASCADE,
    FOREIGN KEY (author) REFERENCES User(_id) ON DELETE CASCADE,
    FOREIGN KEY (author) REFERENCES User(id) ON DELETE CASCADE,
    FOREIGN KEY (post) REFERENCES Post(id) ON DELETE CASCADE,
    FOREIGN KEY (taskId) REFERENCES Task(id) ON DELETE CASCADE
);

CREATE TABLE users (
    id INTEGER NOT NULL,
    name VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL UNIQUE,
    is_staff BOOLEAN NOT NULL,
    created_at TIMESTAMP NOT NULL,
    id UUID NOT NULL,
    email VARCHAR(255) NOT NULL UNIQUE,
    full_name VARCHAR(255) NOT NULL,
    avatar_url VARCHAR(255),
    role VARCHAR(255),
    created_at TIMESTAMP NOT NULL,
    updated_at TIMESTAMP NOT NULL,
    is_active BOOLEAN NOT NULL,
    user_id INTEGER,
    password VARCHAR(255) NOT NULL,
    orders VARCHAR(255),
    id VARCHAR(255) NOT NULL,
    name VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL UNIQUE,
    password_hash VARCHAR(255) NOT NULL,
    avatar_url VARCHAR(255),
    role VARCHAR(255),
    created_at TIMESTAMP,
    PRIMARY KEY (id, id, id),
    FOREIGN KEY (user_id) REFERENCES orders(id) ON DELETE CASCADE
);

CREATE TABLE categories (
    id INTEGER NOT NULL,
    name VARCHAR(255) NOT NULL,
    slug VARCHAR(255) NOT NULL UNIQUE,
    id VARCHAR(255) NOT NULL,
    name VARCHAR(255) NOT NULL UNIQUE,
    slug VARCHAR(255) NOT NULL UNIQUE,
    description VARCHAR(255),
    parent_id INTEGER,
    created_at TIMESTAMP NOT NULL,
    updated_at TIMESTAMP,
    id VARCHAR(255) NOT NULL,
    name VARCHAR(255) NOT NULL,
    slug VARCHAR(255) NOT NULL UNIQUE,
    description VARCHAR(255),
    PRIMARY KEY (id, id, id),
    FOREIGN KEY (parent_id) REFERENCES categories(id) ON DELETE CASCADE
);

CREATE TABLE products (
    id INTEGER NOT NULL,
    category_id INTEGER NOT NULL,
    title VARCHAR(255) NOT NULL,
    price NUMERIC(10,2) NOT NULL,
    stock INTEGER NOT NULL,
    id UUID NOT NULL,
    category_id INTEGER NOT NULL,
    title VARCHAR(255) NOT NULL,
    sku VARCHAR(255) NOT NULL UNIQUE,
    price NUMERIC(10,2) NOT NULL,
    stock_quantity INTEGER NOT NULL,
    is_published BOOLEAN,
    created_at TIMESTAMP NOT NULL,
    updated_at TIMESTAMP,
    id VARCHAR(255) NOT NULL,
    category_id INTEGER NOT NULL,
    name VARCHAR(255) NOT NULL,
    slug VARCHAR(255) NOT NULL UNIQUE,
    price NUMERIC(10,2) NOT NULL,
    stock INTEGER,
    is_active BOOLEAN,
    created_at TIMESTAMP,
    PRIMARY KEY (id, id, id),
    FOREIGN KEY (category_id) REFERENCES categories(id) ON DELETE CASCADE,
    FOREIGN KEY (category_id) REFERENCES categories(id) ON DELETE CASCADE,
    FOREIGN KEY (category_id) REFERENCES categories(id) ON DELETE CASCADE
);

CREATE TABLE orders (
    id INTEGER NOT NULL,
    user_id INTEGER NOT NULL,
    order_number VARCHAR(255) NOT NULL UNIQUE,
    total_price NUMERIC(10,2) NOT NULL,
    created_at TIMESTAMP NOT NULL,
    id UUID NOT NULL,
    user_id UUID NOT NULL,
    order_number VARCHAR(255) NOT NULL UNIQUE,
    status VARCHAR(255) NOT NULL,
    total_amount NUMERIC(10,2) NOT NULL,
    shipping_address VARCHAR(255) NOT NULL,
    created_at TIMESTAMP NOT NULL,
    amount NUMERIC(10,2),
    updated_at TIMESTAMP,
    order_code VARCHAR(255) NOT NULL UNIQUE,
    order_status VARCHAR(255),
    id VARCHAR(255) NOT NULL,
    user_id INTEGER NOT NULL,
    order_number VARCHAR(255) NOT NULL UNIQUE,
    total_amount NUMERIC(10,2) NOT NULL,
    status VARCHAR(255),
    payment_status VARCHAR(255),
    shipping_address VARCHAR(255) NOT NULL,
    created_at TIMESTAMP,
    PRIMARY KEY (id, id, id),
    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,
    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,
    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE
);

CREATE TABLE order_items (
    id VARCHAR(255) NOT NULL,
    order_id UUID NOT NULL,
    product_id UUID NOT NULL,
    unit_price NUMERIC(10,2) NOT NULL,
    quantity INTEGER NOT NULL,
    created_at TIMESTAMP,
    updated_at TIMESTAMP,
    id VARCHAR(255) NOT NULL,
    order_id INTEGER NOT NULL,
    product_id INTEGER NOT NULL,
    quantity INTEGER NOT NULL,
    unit_price NUMERIC(10,2) NOT NULL,
    PRIMARY KEY (id, id),
    FOREIGN KEY (order_id) REFERENCES orders(id) ON DELETE CASCADE,
    FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE CASCADE,
    FOREIGN KEY (order_id) REFERENCES orders(id) ON DELETE CASCADE,
    FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE CASCADE
);

CREATE TABLE reviews (
    id VARCHAR(255) NOT NULL,
    product_id UUID NOT NULL,
    user_id UUID NOT NULL,
    rating INTEGER NOT NULL,
    comment VARCHAR(255),
    created_at TIMESTAMP NOT NULL,
    id VARCHAR(255) NOT NULL,
    user_id INTEGER NOT NULL,
    product_id INTEGER NOT NULL,
    rating INTEGER NOT NULL,
    comment VARCHAR(255),
    created_at TIMESTAMP,
    PRIMARY KEY (id, id),
    FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE CASCADE,
    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,
    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,
    FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE CASCADE
);

CREATE TABLE payments (
    id UUID NOT NULL,
    order_id UUID NOT NULL UNIQUE,
    provider VARCHAR(255) NOT NULL,
    transaction_id VARCHAR(255) NOT NULL,
    amount NUMERIC(10,2) NOT NULL,
    status VARCHAR(255) NOT NULL,
    paid_at TIMESTAMP,
    PRIMARY KEY (id),
    FOREIGN KEY (order_id) REFERENCES orders(id) ON DELETE CASCADE
);

CREATE TABLE Customer (
    _id VARCHAR(255) NOT NULL,
    username VARCHAR(255) NOT NULL UNIQUE,
    email VARCHAR(255) NOT NULL UNIQUE,
    phone VARCHAR(255),
    isActive BOOLEAN,
    createdAt TIMESTAMP,
    PRIMARY KEY (_id)
);

CREATE TABLE Course (
    _id VARCHAR(255) NOT NULL,
    title VARCHAR(255) NOT NULL,
    slug VARCHAR(255) NOT NULL UNIQUE,
    price NUMERIC(10,2) NOT NULL,
    instructorId VARCHAR(255) NOT NULL,
    description VARCHAR(255),
    isPublished BOOLEAN,
    PRIMARY KEY (_id),
    FOREIGN KEY (instructorId) REFERENCES Customer(_id) ON DELETE CASCADE
);

CREATE TABLE Enrollment (
    _id VARCHAR(255) NOT NULL,
    studentId VARCHAR(255) NOT NULL,
    courseId VARCHAR(255) NOT NULL,
    enrolledAt TIMESTAMP,
    progress NUMERIC(10,2),
    PRIMARY KEY (_id),
    FOREIGN KEY (studentId) REFERENCES Customer(_id) ON DELETE CASCADE,
    FOREIGN KEY (courseId) REFERENCES Course(_id) ON DELETE CASCADE
);

CREATE TABLE Profile (
    id VARCHAR(255) NOT NULL,
    bio VARCHAR(255),
    userId VARCHAR(255) NOT NULL UNIQUE,
    PRIMARY KEY (id),
    FOREIGN KEY (userId) REFERENCES User(id) ON DELETE CASCADE
);

CREATE TABLE PostTag (
    postId VARCHAR(255) NOT NULL,
    tagId VARCHAR(255) NOT NULL,
    PRIMARY KEY (postId, tagId),
    FOREIGN KEY (postId) REFERENCES Post(id) ON DELETE CASCADE,
    FOREIGN KEY (tagId) REFERENCES Tag(id) ON DELETE CASCADE
);

CREATE TABLE posts (
    id INTEGER NOT NULL,
    user_id INTEGER NOT NULL,
    title VARCHAR(255) NOT NULL,
    body VARCHAR(255),
    published BOOLEAN,
    created_at TIMESTAMP NOT NULL,
    updated_at TIMESTAMP NOT NULL,
    PRIMARY KEY (id),
    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE
);

CREATE TABLE comments (
    id INTEGER NOT NULL,
    user_id INTEGER NOT NULL,
    post_id INTEGER NOT NULL,
    content VARCHAR(255) NOT NULL,
    created_at TIMESTAMP NOT NULL,
    updated_at TIMESTAMP NOT NULL,
    PRIMARY KEY (id),
    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,
    FOREIGN KEY (post_id) REFERENCES posts(id) ON DELETE CASCADE
);

CREATE TABLE Organization (
    id VARCHAR(255) NOT NULL,
    name VARCHAR(255) NOT NULL,
    slug VARCHAR(255) NOT NULL UNIQUE,
    plan VARCHAR(255) NOT NULL,
    createdAt TIMESTAMP NOT NULL,
    updatedAt TIMESTAMP NOT NULL,
    id VARCHAR(255) NOT NULL,
    name VARCHAR(255) NOT NULL,
    domain VARCHAR(255) NOT NULL UNIQUE,
    teams INTEGER,
    PRIMARY KEY (id, id),
    FOREIGN KEY (teams) REFERENCES Team(id) ON DELETE CASCADE
);

CREATE TABLE Member (
    id VARCHAR(255) NOT NULL,
    organizationId VARCHAR(255) NOT NULL,
    userId VARCHAR(255) NOT NULL,
    role VARCHAR(255) NOT NULL,
    joinedAt TIMESTAMP NOT NULL,
    id VARCHAR(255) NOT NULL,
    fullName VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL UNIQUE,
    team_id INTEGER NOT NULL,
    PRIMARY KEY (id, id),
    FOREIGN KEY (organizationId) REFERENCES Organization(id) ON DELETE CASCADE,
    FOREIGN KEY (team_id) REFERENCES Team(id) ON DELETE CASCADE
);

CREATE TABLE Project (
    id VARCHAR(255) NOT NULL,
    organizationId VARCHAR(255) NOT NULL,
    title VARCHAR(255) NOT NULL,
    description VARCHAR(255),
    isArchived BOOLEAN NOT NULL,
    createdAt TIMESTAMP NOT NULL,
    id INTEGER NOT NULL,
    title VARCHAR(255) NOT NULL,
    leadEmployeeId INTEGER,
    PRIMARY KEY (id, id),
    FOREIGN KEY (organizationId) REFERENCES Organization(id) ON DELETE CASCADE,
    FOREIGN KEY (leadEmployeeId) REFERENCES Employee(id) ON DELETE CASCADE
);

CREATE TABLE Task (
    id VARCHAR(255) NOT NULL,
    projectId VARCHAR(255) NOT NULL,
    title VARCHAR(255) NOT NULL,
    status VARCHAR(255) NOT NULL,
    priority VARCHAR(255) NOT NULL,
    dueDate TIMESTAMP,
    PRIMARY KEY (id),
    FOREIGN KEY (projectId) REFERENCES Project(id) ON DELETE CASCADE
);

CREATE TABLE Department (
    id INTEGER NOT NULL,
    name VARCHAR(255) NOT NULL UNIQUE,
    budget NUMERIC(10,2),
    PRIMARY KEY (id)
);

CREATE TABLE Employee (
    id INTEGER NOT NULL,
    firstName VARCHAR(255) NOT NULL,
    lastName VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL UNIQUE,
    departmentId INTEGER,
    salary INTEGER,
    PRIMARY KEY (id),
    FOREIGN KEY (departmentId) REFERENCES Department(id) ON DELETE CASCADE,
    FOREIGN KEY (departmentId) REFERENCES Department(id) ON DELETE CASCADE,
    FOREIGN KEY (departmentId) REFERENCES Department(id) ON DELETE CASCADE
);

CREATE TABLE Team (
    id VARCHAR(255) NOT NULL,
    title VARCHAR(255) NOT NULL,
    organization_id INTEGER NOT NULL,
    PRIMARY KEY (id),
    FOREIGN KEY (organization_id) REFERENCES Organization(id) ON DELETE CASCADE
);

