// Generated by schemagraph
// Use this DBML at https://dbdiagram.io/

Table Account {
  id ID! [pk, unique, not null]
  email String! [not null]
  username String! [not null]
  isActive Boolean! [not null]
  posts BIGINT
}

Table Post {
  id ID! [pk, unique, not null]
  title String! [not null]
  body String! [not null]
  publishedAt String
  author BIGINT
  tags BIGINT
  id ID! [pk, unique, not null]
  title String! [not null]
  body String
  published Boolean! [not null]
  comments BIGINT
  id String [pk, not null]
  title String [not null]
  content String?
  published Boolean [not null]
  authorId String [not null]
  createdAt DateTime [not null]
}

Table Tag {
  id ID! [pk, unique, not null]
  name String! [not null]
  posts BIGINT
  id String [pk, not null]
  name String [unique, not null]
}

Table User {
  _id ObjectId [pk, unique, not null]
  username String [unique, not null]
  email String [unique, not null]
  passwordHash String [not null]
  bio String
  isActive Boolean
  createdAt Date
  id ID! [pk, unique, not null]
  name String! [not null]
  email String! [not null]
  createdAt String! [not null]
  posts BIGINT
  comments BIGINT
  id String [pk, not null]
  email String [unique, not null]
  name String?
  role String [not null]
  createdAt DateTime [not null]
}

Table Category {
  _id ObjectId [pk, unique, not null]
  name String [unique, not null]
  slug String [not null]
  description String
}

Table Article {
  _id ObjectId [pk, unique, not null]
  title String [not null]
  slug String [unique, not null]
  content String [not null]
  author ObjectId [not null]
  category ObjectId
  tags [String]
  viewCount Number
  isPublished Boolean
  publishedAt Date
}

Table Comment {
  _id ObjectId [pk, unique, not null]
  article ObjectId [not null]
  author ObjectId [not null]
  body String [not null]
  createdAt Date
  id ID! [pk, unique, not null]
  message String! [not null]
  createdAt String! [not null]
  post BIGINT
  id String [pk, not null]
  taskId String [not null]
  authorId String [not null]
  content String [not null]
  createdAt DateTime [not null]
}

Table users {
  id BIGINT [pk, unique, not null]
  name VARCHAR(150) [not null]
  email VARCHAR(254) [unique, not null]
  is_staff BOOLEAN [not null]
  created_at DATETIME [not null]
  id UUID [pk, not null]
  email VARCHAR(255) [unique, not null]
  full_name VARCHAR(100) [not null]
  avatar_url VARCHAR(500)
  role VARCHAR(30)
  created_at TIMESTAMP [not null]
  updated_at TIMESTAMP [not null]
  is_active BOOLEAN [not null]
  user_id BIGINT
  password VARCHAR(255) [not null]
  orders TEXT
  id SERIAL [pk, not null]
  name VARCHAR(100) [not null]
  email VARCHAR(255) [unique, not null]
  password_hash VARCHAR(255) [not null]
  avatar_url VARCHAR(500)
  role VARCHAR(20)
  created_at TIMESTAMP
}

Table categories {
  id BIGINT [pk, unique, not null]
  name VARCHAR(100) [not null]
  slug SLUGFIELD [unique, not null]
  id SERIAL [pk, not null]
  name VARCHAR(100) [unique, not null]
  slug VARCHAR(100) [unique, not null]
  description TEXT
  parent_id INT
  created_at TIMESTAMP [not null]
  updated_at TIMESTAMP
  id SERIAL [pk, not null]
  name VARCHAR(100) [not null]
  slug VARCHAR(120) [unique, not null]
  description TEXT
}

Table products {
  id BIGINT [pk, unique, not null]
  category_id BIGINT [not null]
  title VARCHAR(200) [not null]
  price DECIMAL(10,2) [not null]
  stock INT [not null]
  id UUID [pk, not null]
  category_id INT [not null]
  title VARCHAR(255) [not null]
  sku VARCHAR(64) [unique, not null]
  price DECIMAL(10, 2) [not null]
  stock_quantity INT [not null]
  is_published BOOLEAN
  created_at TIMESTAMP [not null]
  updated_at TIMESTAMP
  id SERIAL [pk, not null]
  category_id INT [not null]
  name VARCHAR(200) [not null]
  slug VARCHAR(220) [unique, not null]
  price DECIMAL(10, 2) [not null]
  stock INT
  is_active BOOLEAN
  created_at TIMESTAMP
}

Table orders {
  id BIGINT [pk, unique, not null]
  user_id BIGINT [not null]
  order_number VARCHAR(64) [unique, not null]
  total_price DECIMAL(10,2) [not null]
  created_at DATETIME [not null]
  id UUID [pk, not null]
  user_id UUID [not null]
  order_number VARCHAR(50) [unique, not null]
  status VARCHAR(30) [not null]
  total_amount DECIMAL(12, 2) [not null]
  shipping_address TEXT [not null]
  created_at TIMESTAMP [not null]
  amount FLOAT
  updated_at TIMESTAMP
  order_code VARCHAR(50) [unique, not null]
  order_status VARCHAR(30)
  id SERIAL [pk, not null]
  user_id INT [not null]
  order_number VARCHAR(50) [unique, not null]
  total_amount DECIMAL(10, 2) [not null]
  status VARCHAR(50)
  payment_status VARCHAR(50)
  shipping_address TEXT [not null]
  created_at TIMESTAMP
}

Table order_items {
  id SERIAL [pk, not null]
  order_id UUID [not null]
  product_id UUID [not null]
  unit_price DECIMAL(10, 2) [not null]
  quantity INT [not null]
  created_at TIMESTAMP
  updated_at TIMESTAMP
  id SERIAL [pk, not null]
  order_id INT [not null]
  product_id INT [not null]
  quantity INT [not null]
  unit_price DECIMAL(10, 2) [not null]
}

Table reviews {
  id SERIAL [pk, not null]
  product_id UUID [not null]
  user_id UUID [not null]
  rating INT [not null]
  comment TEXT
  created_at TIMESTAMP [not null]
  id SERIAL [pk, not null]
  user_id INT [not null]
  product_id INT [not null]
  rating INT [not null]
  comment TEXT
  created_at TIMESTAMP
}

Table payments {
  id UUID [pk, not null]
  order_id UUID [unique, not null]
  provider VARCHAR(50) [not null]
  transaction_id VARCHAR(100) [not null]
  amount DECIMAL(12, 2) [not null]
  status VARCHAR(30) [not null]
  paid_at TIMESTAMP
}

Table Customer {
  _id ObjectId [pk, unique, not null]
  username String [unique, not null]
  email String [unique, not null]
  phone String
  isActive Boolean
  createdAt Date
}

Table Course {
  _id ObjectId [pk, unique, not null]
  title String [not null]
  slug String [unique, not null]
  price Number [not null]
  instructorId ObjectId [not null]
  description String
  isPublished Boolean
}

Table Enrollment {
  _id ObjectId [pk, unique, not null]
  studentId ObjectId [not null]
  courseId ObjectId [not null]
  enrolledAt Date
  progress Number
}

Table Profile {
  id String [pk, not null]
  bio String?
  userId String [unique, not null]
}

Table PostTag {
  postId String [pk, not null]
  tagId String [pk, not null]
}

Table posts {
  id BIGINT [pk, unique, not null]
  user_id BIGINT [not null]
  title VARCHAR(255) [not null]
  body TEXT
  published BOOLEAN
  created_at TIMESTAMP [not null]
  updated_at TIMESTAMP [not null]
}

Table comments {
  id BIGINT [pk, unique, not null]
  user_id BIGINT [not null]
  post_id BIGINT [not null]
  content TEXT [not null]
  created_at TIMESTAMP [not null]
  updated_at TIMESTAMP [not null]
}

Table Organization {
  id String [pk, not null]
  name String [not null]
  slug String [unique, not null]
  plan String [not null]
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
  id string [pk, not null]
  name varchar [not null]
  domain varchar [unique, not null]
  teams BIGINT
}

Table Member {
  id String [pk, not null]
  organizationId String [not null]
  userId String [not null]
  role String [not null]
  joinedAt DateTime [not null]
  id string [pk, not null]
  fullName varchar [not null]
  email varchar [unique, not null]
  team_id UUID/Int [not null]
}

Table Project {
  id String [pk, not null]
  organizationId String [not null]
  title String [not null]
  description String?
  isArchived Boolean [not null]
  createdAt DateTime [not null]
  id INTEGER [pk, not null]
  title STRING [not null]
  leadEmployeeId INTEGER
}

Table Task {
  id String [pk, not null]
  projectId String [not null]
  title String [not null]
  status String [not null]
  priority String [not null]
  dueDate DateTime?
}

Table Department {
  id INTEGER [pk, not null]
  name STRING [unique, not null]
  budget FLOAT
}

Table Employee {
  id INTEGER [pk, not null]
  firstName STRING [not null]
  lastName STRING [not null]
  email STRING [unique, not null]
  departmentId INTEGER
  salary INTEGER
}

Table Team {
  id string [pk, not null]
  title varchar [not null]
  organization_id UUID/Int [not null]
}

Ref: Account.posts > Post.id
Ref: Post.author > Account.id
Ref: Post.tags > Tag.id
Ref: Post.author > User.id
Ref: Post.comments > Comment.id
Ref: Post.authorId > User.id
Ref: Tag.posts > Post.id
Ref: User.posts > Post.id
Ref: User.comments > Comment.id
Ref: Article.author > User._id
Ref: Article.category > Category._id
Ref: Comment.article > Article._id
Ref: Comment.author > User._id
Ref: Comment.author > User.id
Ref: Comment.post > Post.id
Ref: Comment.taskId > Task.id
Ref: users.user_id > orders.id
Ref: categories.parent_id > categories.id
Ref: products.category_id > categories.id
Ref: products.category_id > categories.id
Ref: products.category_id > categories.id
Ref: orders.user_id > users.id
Ref: orders.user_id > users.id
Ref: orders.user_id > users.id
Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id
Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id
Ref: reviews.product_id > products.id
Ref: reviews.user_id > users.id
Ref: reviews.user_id > users.id
Ref: reviews.product_id > products.id
Ref: payments.order_id > orders.id
Ref: Course.instructorId > Customer._id
Ref: Enrollment.studentId > Customer._id
Ref: Enrollment.courseId > Course._id
Ref: Profile.userId > User.id
Ref: PostTag.postId > Post.id
Ref: PostTag.tagId > Tag.id
Ref: posts.user_id > users.id
Ref: comments.user_id > users.id
Ref: comments.post_id > posts.id
Ref: Organization.teams > Team.id
Ref: Member.organizationId > Organization.id
Ref: Member.team_id > Team.id
Ref: Project.organizationId > Organization.id
Ref: Project.leadEmployeeId > Employee.id
Ref: Task.projectId > Project.id
Ref: Employee.departmentId > Department.id
Ref: Employee.departmentId > Department.id
Ref: Employee.departmentId > Department.id
Ref: Team.organization_id > Organization.id
